# pg_raw_parse

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  copy_pg_error.c  wrapper.h
.github/workflows/: ci.yml
benches/: bench.rs
include/: copy_pg_error.h
src/: bindings.rs  const_val.rs  deparse.rs  error.rs  lib.rs  list.rs  list_mut.rs  make.rs  mem.rs  node_enum.rs  node_ptr.rs  nodes.rs  normalize.rs  owned.rs  pg_error.rs  raw.rs  transform.rs  util.rs  walk.rs
tests/: test_alter_aggregate.rs  test_alter_collation.rs  test_alter_conversion.rs  test_alter_database.rs  test_alter_default_privileges.rs  test_alter_domain.rs  test_alter_event_trigger.rs  test_alter_extension.rs  test_alter_foreign_data_wrapper.rs  test_alter_foreign_table.rs  test_alter_function.rs  test_alter_group.rs  test_alter_index.rs  test_alter_language.rs  test_alter_large_object.rs  test_alter_materialized_view.rs  test_alter_operator.rs  test_alter_operator_class.rs  test_alter_operator_family.rs  test_alter_policy.rs  test_alter_procedure.rs  test_alter_publication.rs  test_alter_role.rs  test_alter_routine.rs  test_alter_rule.rs  test_alter_schema.rs  test_alter_sequence.rs  test_alter_server.rs  test_alter_statistics.rs  test_alter_subscription.rs  test_alter_system.rs  test_alter_table.rs  test_alter_tablespace.rs  test_alter_text_search_configuration.rs  test_alter_text_search_dictionary.rs  test_alter_text_search_parser.rs  test_alter_text_search_template.rs  test_alter_trigger.rs  test_alter_type.rs  test_alter_user.rs  (+99 more)
tests/common/: mod.rs
