[package]
name = "pg_raw_parse"
version = "0.1.0"
edition = "2024"

[features]
# Enables compile-time checks to verify that our enums are actually layout
# identical to the C structures we're casting from. Requires a nightly compiler
field_offset_assertions = []

[dependencies]
generativity = "1.2.1"
libc = "0.2.186"
thiserror = "2.0.18"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.64"
glob = "0.3.3"
prettyplease = "0.2.37"
regex = "1.12.4"
syn = { version = "2.0.118", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
criterion = "0.8.2"
pg_query = { version = "6.1.1", git = "https://github.com/pgdogdev/pg_query.rs.git" }
pretty_assertions = "1.4.1"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }

[[bench]]
name = "bench"
harness = false
